<resources>
    <string name="app_name">SD MANAGER</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="delNotifyMsg">确定删除所有数据？\n删除数据等待时间大约120秒。</string>

    <string name="start_scan">开始扫描</string>
    <string name="start_send">开始发送</string>
    <string name="start_notify">开始监听</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">查看日志</string>


    <string name="device_status">设备状态</string>
    <string name="delete_data">清空数据</string>
    <string name="end_uploading">结束上传</string>

    <string name="start_uploading">开始上传</string>
    <string name="end_collection">停止采集</string>
    <string name="start_collection">开始采集</string>

    <string name="start_search">开始扫描</string>
    <string name="end_search">停止扫描</string>

    <string name="show_mac">查看MAC</string>
    <string name="show_pin">查看PIN</string>
    <string name="clean_screen">清屏</string>


    <string name="select_dev">选择设备</string>
    <string name="select_dir">选择目录</string>
    <string name="start_save">开始保存</string>
    <string name="stop_save">停止保存</string>
    <string name="mode_caiyang">选择采样模式</string>
    <string name="pinlv_caiyang">选择采样频率</string>


    <string name="filechoose_app_name">FileDirChoose</string>
    <string name="filechoose_record">Record</string>
    <string name="filechoose_stop">Stop</string>
    <string name="filechoose_description_info">Info</string>
    <string name="filechoose_permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="filechoose_camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="filechoose_intro_message">sss</string>
    <string name="filechoose_already">您已经选中该文件夹</string>
    <string name="filechoose_sure">确定</string>
</resources>
