<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="SD MANAGER"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_loading"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/list_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scrollbars="none" />

        <ScrollView
            android:id="@+id/scrollview_logs"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/text_logs"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="0.5dp"
                android:fadeScrollbars="false"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scrollbars="vertical" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.75"
                    android:text="@string/start_search" />

                <Button
                    android:id="@+id/btn_mode_caiyang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/mode_caiyang" />

                <Button
                    android:id="@+id/btn_pinlv_caiyang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/pinlv_caiyang" />

                <Button
                    android:id="@+id/btn_show_pin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/show_pin"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_clean_screen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/clean_screen"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start_collection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_collection" />

                <Button
                    android:id="@+id/btn_end_collection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/end_collection" />

                <Button
                    android:id="@+id/btn_start_uploading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/start_uploading"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_end_uploading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_uploading"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_delete_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/delete_data" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_device_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/device_status" />

                <Button

                    android:id="@+id/btn_select_dev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/select_dev" />

                <Button
                    android:id="@+id/btn_select_dir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/select_dir" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_start_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/start_save" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

